replace aelous DTO classes with records