@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonInclude;
@@ -14,86 +15,42 @@ import com.fasterxml.jackson.databind.module.SimpleModule;
 import de.tum.cit.aet.artemis.programming.service.aeolus.ActionDeserializer;
 
 /**
- * Represents a windfile, the definition file for an aeolus build plan that
- * can then be used to generate a Jenkinsfile.
+ * Represents a windfile, the definition file for an aeolus build plan that can then be used to generate a Jenkinsfile.
  */
-// TODO convert into Record
 @JsonIgnoreProperties(ignoreUnknown = true)
 @JsonInclude(JsonInclude.Include.NON_EMPTY)
-public class Windfile {
+public record Windfile(String api, WindfileMetadata metadata, List<Action> actions, Map<String, AeolusRepository> repositories) {
+
+    public Windfile {
+        if (actions == null) {
+            actions = new ArrayList<>();
+        }
+        if (repositories == null) {
+            repositories = new HashMap<>();
+        }
+    }
 
     private static final ObjectMapper mapper = new ObjectMapper();
 
-    private String api;
-
-    private WindfileMetadata metadata;
-
-    private List<Action> actions = new ArrayList<>();
-
-    private Map<String, AeolusRepository> repositories = new HashMap<>();
-
-    public String getApi() {
-        return api;
-    }
-
-    public void setApi(String api) {
-        this.api = api;
-    }
-
-    public WindfileMetadata getMetadata() {
-        return metadata;
-    }
-
-    public void setMetadata(WindfileMetadata metadata) {
-        this.metadata = metadata;
-    }
-
-    public List<Action> getActions() {
-        return actions;
-    }
-
-    public void setActions(List<Action> actions) {
-        this.actions = actions;
+    /**
+     * Creates a new windfile based on an existing one with updated metadata.
+     *
+     * @param existingWindfile the existing windfile to base the new one on.
+     * @param metadata         the metadata of the newly created windfile.
+     */
+    public Windfile(Windfile existingWindfile, WindfileMetadata metadata) {
+        this(existingWindfile.api(), metadata, existingWindfile.actions(), existingWindfile.repositories());
     }
 
     /**
-     * Gets the script actions of a windfile.
+     * Creates a new windfile based on an existing one with updated metadata.
      *
-     * @return the script actions of a windfile.
+     * @param existingWindfile the existing windfile to base the new one on.
+     * @param metadata         the metadata of the newly created windfile.
+     * @param repositories     the repositories of the newly created windfile.
      */
-    public List<ScriptAction> getScriptActions() {
-        List<ScriptAction> scriptActions = new ArrayList<>();
-        for (Action action : actions) {
-            if (action instanceof ScriptAction) {
-                scriptActions.add((ScriptAction) action);
-            }
-        }
-        return scriptActions;
-    }
-
-    public void setRepositories(Map<String, AeolusRepository> repositories) {
-        this.repositories = repositories;
-    }
-
-    public Map<String, AeolusRepository> getRepositories() {
-        return repositories;
-    }
-
-    /**
-     * Sets the pre-processing metadata for the windfile.
-     *
-     * @param id                    the id of the windfile.
-     * @param name                  the name of the windfile.
-     * @param gitCredentials        the git credentials of the windfile.
-     * @param resultHook            the result hook of the windfile.
-     * @param description           the description of the windfile.
-     * @param repositories          the repositories of the windfile.
-     * @param resultHookCredentials the credentials for the result hook of the windfile.
-     */
-    public void setPreProcessingMetadata(String id, String name, String gitCredentials, String resultHook, String description, Map<String, AeolusRepository> repositories,
-            String resultHookCredentials) {
-        this.setMetadata(new WindfileMetadata(name, id, description, null, gitCredentials, null, resultHook, resultHookCredentials));
-        this.setRepositories(repositories);
+    public Windfile(Windfile existingWindfile, WindfileMetadata metadata, Map<String, AeolusRepository> repositories) {
+        this(existingWindfile.api(), metadata, existingWindfile.actions(), repositories);
     }
 
     /**
@@ -111,15 +68,20 @@ public class Windfile {
     }
 
     /**
+     * Gets the script actions of a windfile.
+     *
+     * @return the script actions of a windfile.
+     */
+    public List<ScriptAction> scriptActions() {
+        return actions.stream().filter(ScriptAction.class::isInstance).map(ScriptAction.class::cast).collect(Collectors.toList());
+    }
+
+    /**
      * Collects the results of all actions of a windfile.
      *
      * @return the results of all actions of this windfile
      */
-    public List<AeolusResult> getResults() {
-        List<AeolusResult> results = new ArrayList<>();
-        for (Action action : actions.stream().filter(action -> action.getResults() != null && !action.getResults().isEmpty()).toList()) {
-            results.addAll(action.getResults());
-        }
-        return results;
+    public List<AeolusResult> results() {
+        return actions.stream().filter(action -> action.results() != null && !action.results().isEmpty()).flatMap(action -> action.results().stream()).collect(Collectors.toList());
     }
 }
